force-app/main/default/objects/Crew_Involved__c/Crew_Involved__c.object-meta.xml
<CustomObject>
    <label>Crew Involved</label>
    <nameField>
        <displayFormat>CIV-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crews Involved</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>