force-app/main/default/objects/Crew_Involved__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Crew_Position</valueSetName>
    </valueSet>
</CustomField>